[package]
name = "tosmole"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
opt-level = 3

[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
binrw = "0.15.0"
flate2 = { version = "1.1.2", default-features = false, features = ["zlib"] }
quick-xml = "0.38.3"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
